--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,6 +21,14 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    prefer_const_constructors: false
+    constant_identifier_names: false
+    prefer_const_literals_to_create_immutables: false
+    curly_braces_in_flow_control_structures: false
+    library_private_types_in_public_api: false
+    unnecessary_overrides: false
+    use_build_context_synchronously: false
+
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
