--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
-  google_fonts: ^6.1.0
-  firebase_core: ^2.25.4
 
-  google_sign_in: ^6.2.1
+  firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.15.4
+
+  google_fonts: ^6.1.0
+  google_sign_in: ^6.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
