--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
   intl: ^0.19.0
+  flutter_sticky_header: ^0.6.5
 
 dev_dependencies:
   flutter_test:
