--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_sign_in: ^6.2.1
   intl: ^0.19.0
   flutter_sticky_header: ^0.6.5
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
