--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   intl: ^0.19.0
   flutter_sticky_header: ^0.6.5
   flutter_secure_storage: ^9.0.0
+  flutter_local_notifications: ^16.3.2
+  timezone: ^0.9.2
+  flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
   flutter_test:
