--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   flutter_local_notifications: ^16.3.2
   timezone: ^0.9.2
-  flutter_native_timezone: ^2.0.0
+  flutter_timezone: ^1.0.8
 
 dev_dependencies:
   flutter_test:
